export const snapshot = {};

snapshot[`slugify_urls plugin 1`] = `3`;

snapshot[`slugify_urls plugin 2`] = `
{
  formats: [
    {
      engine: true,
      key: ".tmpl.ts",
      loader: [AsyncFunction: module],
      page: "html",
    },
    {
      engine: true,
      key: ".tmpl.js",
      loader: [AsyncFunction: module],
      page: "html",
    },
    {
      engine: false,
      key: ".tmpl.json",
      loader: [AsyncFunction: json],
      page: "html",
    },
    {
      data: true,
      engine: false,
      key: ".json",
      loader: [AsyncFunction: json],
    },
    {
      engine: true,
      key: ".md",
      loader: [AsyncFunction: text],
      page: "html",
    },
    {
      component: true,
      data: true,
      engine: true,
      key: ".js",
      loader: [AsyncFunction: module],
    },
    {
      component: true,
      data: true,
      engine: true,
      key: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      component: true,
      engine: true,
      includesPath: "_includes",
      key: ".njk",
      loader: [AsyncFunction: text],
      page: "html",
    },
    {
      data: true,
      engine: false,
      key: ".yaml",
      loader: [AsyncFunction: yaml],
      page: "html",
    },
    {
      data: true,
      engine: false,
      key: ".yml",
      loader: [AsyncFunction: yaml],
      page: "html",
    },
  ],
}
`;

snapshot[`slugify_urls plugin 3`] = `
[
]
`;

snapshot[`slugify_urls plugin 4`] = `
{
  content: "<p>Page 2</p>
",
  data: {
    content: "Page 2
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/chourizos-ao-vino/",
  },
  dest: {
    ext: ".html",
    path: "/chourizos-ao-vino/index",
  },
  src: {
    ext: ".md",
    path: "/Chourizos ao viño",
  },
}
`;

snapshot[`slugify_urls plugin 5`] = `
{
  content: "<p>Page 1</p>
",
  data: {
    content: "Page 1
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/page-1/",
  },
  dest: {
    ext: ".html",
    path: "/page-1/index",
  },
  src: {
    ext: ".md",
    path: "/Page 1",
  },
}
`;

snapshot[`slugify_urls plugin 6`] = `
{
  content: "<p>Page 3</p>
",
  data: {
    content: "
Page 3
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/paxina-numero/tres/",
  },
  dest: {
    ext: ".html",
    path: "/paxina-numero/tres/index",
  },
  src: {
    ext: ".md",
    path: "/page-3",
  },
}
`;
